// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`increment should deploy 1`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "type": "known",
            "value": {
              "$$type": "Deploy",
              "queryId": 0n,
            },
          },
          "bounce": true,
          "from": "@treasure(treasure)",
          "to": "kQADF1XEYH0AcGnZy3McBbt2mOzkSBGQ9Rnb4D0aQoLQZVLP",
          "type": "internal",
          "value": "10",
        },
      },
      {
        "$type": "processed",
        "gasUsed": 8507n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "type": "known",
              "value": {
                "$$type": "DeployOk",
                "queryId": 0n,
              },
            },
            "bounce": false,
            "from": "kQADF1XEYH0AcGnZy3McBbt2mOzkSBGQ9Rnb4D0aQoLQZVLP",
            "to": "@treasure(treasure)",
            "type": "internal",
            "value": "9.990297",
          },
        ],
      },
    ],
  },
]
`;

exports[`increment should deploy 2`] = `
[
  {
    "$seq": 1,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "type": "known",
            "value": {
              "$$type": "Increment",
              "key": 0n,
              "value": -1232n,
            },
          },
          "bounce": true,
          "from": "@treasure(treasure)",
          "to": "kQADF1XEYH0AcGnZy3McBbt2mOzkSBGQ9Rnb4D0aQoLQZVLP",
          "type": "internal",
          "value": "10",
        },
      },
      {
        "$type": "processed",
        "gasUsed": 6015n,
      },
    ],
  },
]
`;
